fix the scroll and thetruncated text

--- a/src/css/grabpress.css
+++ b/src/css/grabpress.css
@@ -749,7 +749,7 @@ line-height: 24px;
     height:198px;
 }
 .nano .content{
-    margin:10px;
+    margin:3px 10px 10px 10px;
     right: -27px !important;
 }
 .nano .pane{
